✨ Enrich timeline and love list with new entries and refinements
Enhances the narrative depth of the timeline and love list by adding new entries and refining existing ones. This change enriches the storytelling aspect of the site, making it more engaging and reflective of the relationship's evolution.

--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
                 </div>
 
                 <div class="timeline-entry animate-on-scroll">
+                    <div class="timeline-date">February 3, 2026</div>
+                    <h3>Silencing the Slow-Down Fairy</h3>
+                    <p>Captain Carl's party. The voice in my head — the one that says <em>shouldn't you pump the brakes?</em> — made its case. I listened. Then I told it to sit down. A wise person told me: "The most damaging thing we do for love is restrain it. No — just be. Just go all in." So I did. We did.</p>
+                </div>
+
+                <div class="timeline-entry animate-on-scroll">
                     <div class="timeline-date">February 5–8, 2026</div>
                     <h3>Love Burn — Miami</h3>
                     <p>Four days in Miami at a burn. You tagged me on Instagram. I let you claim me on your timeline before I claimed you on mine. The red and blue photo — that's the one where everyone else figured out what we already knew.</p>
@@ -284,8 +290,8 @@
                 <div class="love-item animate-on-scroll">
                     <span class="love-number">17</span>
                     <div class="love-content">
-                        <h3>Celebrating your professional badassery</h3>
-                        <p>You're the #1 realtor in Bouldin Creek. A boss babe who wants to be treated like a goddess, not kept. I see both.</p>
+                        <h3>Celebrating the full you</h3>
+                        <p>Game designer, product manager, design manager, app designer — and then you became the #1 realtor in Bouldin Creek. You didn't fall into success. You reinvented yourself and dominated every version. I see every era of you.</p>
                     </div>
                 </div>
                 <div class="love-item animate-on-scroll">
@@ -317,6 +323,20 @@
                     </div>
                 </div>
             </div>
+                <div class="love-item animate-on-scroll">
+                    <span class="love-number">22</span>
+                    <div class="love-content">
+                        <h3>Saying your name</h3>
+                        <p>Julianna. Not babe, not baby, not hey you. <em>Julianna.</em> You've told me more than once how much you love hearing it. So I say it. Often. Because you deserve to be called by the name that's yours — specifically, intentionally, like I mean it every time.</p>
+                    </div>
+                </div>
+                <div class="love-item animate-on-scroll">
+                    <span class="love-number">23</span>
+                    <div class="love-content">
+                        <h3>Making sure you get all the right supplements</h3>
+                        <p>Biohacking you with the full stack. Especially Vitamin N. Doctor's orders. Non-negotiable. Your wellness regimen has never been more... thorough.</p>
+                    </div>
+                </div>
             <p class="love-closing animate-on-scroll">We're building this list together. Haven keeps it growing.</p>
         </section>
 
@@ -362,8 +382,8 @@
                     <p>The third thing never comes. It started at Christmas Burn and now it's just how I open every important conversation.</p>
                 </div>
                 <div class="reference animate-on-scroll">
-                    <span class="reference-quote">"This is probably unhealthy"</span>
-                    <p>We know we're obsessed with each other. We know it's a little much. It feels too good to stop. Why would we?</p>
+                    <span class="reference-quote">"The Slow-Down Fairy"</span>
+                    <p>That voice that says <em>shouldn't you pump the brakes?</em> I heard it. We both did. And then I told her to sit down. We're going all in.</p>
                 </div>
             </div>
         </section>
