fix: replace misinterpreted 'Tasmanian devil' with 'Making the bed properly'
The original was about keeping sheets neat, not the other interpretation.
Removed the reference from Little Things section too.

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                 <div class="love-item animate-on-scroll">
                     <span class="love-number">06</span>
                     <div class="love-content">
-                        <h3>Not being a Tasmanian devil in bed</h3>
-                        <p>Intentional, present, attuned. Not rushing. Not performing. Being <em>with</em> you.</p>
+                        <h3>Making the bed properly</h3>
+                        <p>Sheets untangled, pillows where they belong. A small thing that says: I care about the space we share.</p>
                     </div>
                 </div>
                 <div class="love-item animate-on-scroll">
@@ -368,10 +368,6 @@
                 <div class="reference animate-on-scroll">
                     <span class="reference-quote">"I think I found my person"</span>
                     <p>What you told your friends. The words that made it real outside the two of us.</p>
-                </div>
-                <div class="reference animate-on-scroll">
-                    <span class="reference-quote">"Not a Tasmanian devil in bed"</span>
-                    <p>Your words. Now it's our shorthand for what good looks like.</p>
                 </div>
                 <div class="reference animate-on-scroll">
                     <span class="reference-quote">"94% Spotify blend"</span>
