fix: rewrite Love Burn description to focus on burning together through adversity

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <div class="timeline-entry animate-on-scroll">
                     <div class="timeline-date">February 5–8, 2026</div>
                     <h3>Love Burn — Miami</h3>
-                    <p>Four days in Miami at a burn. You tagged me on Instagram. I let you claim me on your timeline before I claimed you on mine. The red and blue photo — that's the one where everyone else figured out what we already knew.</p>
+                    <p>Four days in Miami at a burn — chaos, dust, and everything thrown at us. And we came out closer. We burned together beautifully, and the adversity only pulled us tighter. That's when we knew: if we can do <em>this</em> together, we can do anything.</p>
                 </div>
 
                 <div class="timeline-entry animate-on-scroll">
